--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="screen fs-screen ">
             <div class="file-input">
                 <label for="file-input">
@@ -29,6 +29,9 @@
             <div class="files-list">
                 <div class="title">Shared Files:</div>
             </div>
+        </div>
+        <div class="footer">
+            <p> All rights reserved by Praveen A</p>
         </div>
     </div>
 
