--- a/public/receiver.html
+++ b/public/receiver.html
@@ -24,6 +24,9 @@
                 <div class="title">Shared Files:</div>
             </div>
         </div>
+        <div class="footer">
+            <p> All rights reserved by Praveen A</p>
+        </div>
     </div>
 
     <script type="text/javascript" src="socket.io/socket.io.js"></script>
